--- a/frontend/myridehub/src/ResetPassword/ResetPassword.css
+++ b/frontend/myridehub/src/ResetPassword/ResetPassword.css
@@ -15,9 +15,9 @@
     margin-bottom: 20px;
   }
   
-  /* Title and subtitle */
+  
   .reset-title {
-    color: white;
+    color: rgb(220, 220, 220);
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 10px;
