--- a/frontend/myridehub/src/LandingPage/LandingPage.css
+++ b/frontend/myridehub/src/LandingPage/LandingPage.css
@@ -95,7 +95,7 @@
   line-height: 1.6;
   margin-bottom: 12px;
   max-width: 600px;
-  color: white; /* Add this line */
+  color: white; 
 }
   
   .learn-more-btn {
